# exsat-initialize-data

./: .example.env  .gitignore  README.md  docker-compose.yml  setup-bitcoin-fullnode.sh  setup-bitcoin-prunenode.sh  setup-bitcoin-testnet3.sh  setup-golang.sh  setup-rust.sh
clickhouse/: clickhouse_config.xml  clickhouse_docker_related_config.xml  clickhouse_users.xml
fetch_bitcoin_blockhaeder/: Cargo.toml  block_headers.csv  block_headers.db
fetch_bitcoin_blockhaeder/src/: block_header.rs  main.rs  spv_verification.rs  types.rs  utils.rs  verification.rs
fetch_utxos_from_eletrumx/: Cargo.toml
fetch_utxos_from_eletrumx/src/: main.rs
leveldb_comparator/: Cargo.toml
leveldb_comparator/src/: main.rs
leveldb_comparator_go/: go.mod  main.go
miner_fee_sum/: main.py
multi_clients/: README.md
multi_clients/synchronizers/: docker-compose.yml
multi_clients/validators/: docker-compose.yml
rpc-service/: docker-compose.yml  nginx.conf
rpc-service/docker-nginx-certbot/: init-letsencrypt.sh
rpc-service/docker-nginx-certbot/data/nginx/: app.conf
verify-scripts/: check-mainnet-check-utxo.py  fetch-mainnet-blocks.py  fetch-mainnet-utxo.py  spring_contract_hash_checker.sh
