[package]
name = "fetch_bitcoin_blockheader"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
rayon = "1.5.1"
retry = "1.3.1"
tokio = { version = "1", features = ["full"] }
