[package]
name = "fetch_utxos_from_eletrumx"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
thiserror = "1.0"
clickhouse = "0.11"
tokio = { version = "1", features = ["full"] }
env_logger = "0.9"