[package]
name = "elex_ldb_comparator"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
clickhouse = { version = "0.11", features = ["uuid"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"